# ainu-utils

./: .editorconfig  .gitignore  Cargo.toml  README.md  cspell.json  flake.nix
.github/workflows/: ci.yaml  ci_js.yaml  ci_python.yaml  ci_rust.yaml  js_release.yaml  nodejs.yml  python.yaml  python_release.yaml  release_js.yaml  release_pyhon.yaml  release_python.yaml  release_rust.yaml  rust.yaml  rust_release.yaml
ainu-utils/: Cargo.toml
ainu-utils-js/: .gitignore  Cargo.toml  build.sh  package-lock.json  package.json  patch.js  vite.config.js
ainu-utils-js/src/: lib.rs
ainu-utils-js/tests/: ainu_utils.test.js  index.spec.js
ainu-utils-nodejs/: Cargo.toml  index.d.ts  index.js  package.json
ainu-utils-nodejs/__test__/: index.spec.mjs
ainu-utils-nodejs/npm/android-arm-eabi/: README.md  package.json
ainu-utils-nodejs/npm/android-arm64/: README.md  package.json
ainu-utils-nodejs/npm/darwin-arm64/: README.md  package.json
ainu-utils-nodejs/npm/darwin-universal/: README.md  package.json
ainu-utils-nodejs/npm/darwin-x64/: README.md  package.json
ainu-utils-nodejs/npm/freebsd-x64/: README.md  package.json
ainu-utils-nodejs/npm/linux-arm-gnueabihf/: README.md  package.json
ainu-utils-nodejs/npm/linux-arm64-gnu/: README.md  package.json
ainu-utils-nodejs/npm/linux-arm64-musl/: README.md  package.json
ainu-utils-nodejs/npm/linux-riscv64-gnu/: README.md  package.json
ainu-utils-nodejs/npm/linux-x64-gnu/: README.md  package.json
ainu-utils-nodejs/npm/linux-x64-musl/: README.md  package.json
ainu-utils-nodejs/npm/win32-arm64-msvc/: README.md  package.json
ainu-utils-nodejs/npm/win32-ia32-msvc/: README.md  package.json
ainu-utils-nodejs/npm/win32-x64-msvc/: README.md  package.json
ainu-utils-nodejs/src/: lib.rs
ainu-utils-python/: Cargo.toml  ainu_utils.pyi  pyproject.toml
ainu-utils-python/src/: lib.rs
ainu-utils-python/tests/: test_number_to_words.py  test_tokenize.py  test_transliterate_to_kana.py
ainu-utils/examples/: datetime.rs  kana.rs  number.rs  syllables.rs  tokenize.rs
ainu-utils/src/: lib.rs  phoneme.rs  segmenter.rs  tokenizer.rs
(+23 files in other folders)
