[package]
name = "ainu-utils-js"
version = "0.1.1"
edition = "2021"
description = "A collection of utilities for the Ainu language"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ainu_utils"
crate-type = ["cdylib", "rlib"]

[dependencies]
ainu-utils = { path = "../ainu-utils" }
wasm-bindgen = "0.2.92"
