[package]
name = "ainu-utils-js"
version = "0.5.3"
edition = "2024"
description = "A toolkit for Ainu language processing, available in Rust, JavaScript, and Python."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ainu-utils = { path = "../ainu-utils" }
wasm-bindgen = "0.2.114"
js-sys = "0.3"
