[package]
name = "ainu-utils-python"
version = "0.5.3"
edition = "2021"
description = "A toolkit for Ainu language processing, available in Rust, JavaScript, and Python."
license = "MIT"

[lib]
name = "ainu_utils"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
ainu-utils = { path = "../ainu-utils" }
