[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "ainu-utils"
description = "A toolkit for Ainu language processing"
requires-python = ">=3.8"
version = "0.5.3"
license = "MIT"

[project.optional-dependencies]
test = ["pytest==8.1.1"]
dev = ["ruff==0.3.3", "mypy==1.9.0", "maturin>=1.12,<2.0"]
